--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,8 +9,7 @@
 <nav class="main-container mx-auto text-center">
 
     <button class="button" id="home">Home</button>
-    <button class="button" id="view">View</button>
-    <button class="button" id="add">Add</button>
+    <button class="button" id="view">View/Edit</button>
     <button class="button" id="year">Year</button>
     <button class="button" id="competitors">Competitors</button>
     <button class="button" id="scores">Scores</button>
