--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -15,17 +15,31 @@
         <option>Years</option>
     </select>
 
-    <button class="button" id="view-menu-button">View Results</button>
+    <button class="button" id="view-menu-button">View Items</button>
 
 </main>
 
-<section class="main-container mx-auto text-center" id="view-container"></section>
+<section class="main-container mx-auto text-center hide" id="view-container"></section>
+
+<section class="main-container mx-auto text-center">
+
+    <select id="add-menu">
+        <option>Tiers</option>
+        <option>Events</option>
+        <option>Organizations</option>
+        <option>Years</option>
+    </select>
+
+    <button class="button" id="add-menu-button">Add Item</button>
+
+    <div id="add-container"></div>
+
+</section>
 
 <nav class="main-container mx-auto text-center">
 
     <button class="button" id="home">Home</button>
-    <button class="button" id="view">View</button>
-    <button class="button" id="add">Add</button>
+    <button class="button" id="view">View/Edit</button>
     <button class="button" id="year">Year</button>
     <button class="button" id="competitors">Competitors</button>
     <button class="button" id="scores">Scores</button>
