--- a/views/competitors.handlebars
+++ b/views/competitors.handlebars
@@ -1,65 +1,61 @@
-<header class="header-container mx-auto">
+<head>
+    <title>Annual Lineworkers Rodeo Scoring | {{#each arrays}} {{title}} {{/each}}</title>
+    {{> main/head-block}}
+    <!-- competitors page js script -->
+    <script type="text/javascript" src="/assets/js/comp.js"></script>
+</head>
+<body class="background">
 
-    <h1 class="title mx-auto">Competitor Entry</h1>
+    {{#each arrays}}
+        {{> main/title-block}}
+    {{/each}}
+
+    <main>
+
+        <section class="main-container mx-auto text-center">
+
+            <p class="item-title mx-auto">Select Competition Year</p>
+            
+            <select id="year-select">
+                {{#each arrays}}
+                    {{#each years}}
+                        {{> year/year-block}}
+                    {{/each}}
+                {{/each}}
+            </select>
+            
+        </section>
     
-    <img class="logo row mx-auto" src="/assets/images/logo.png" alt="Santee Cooper logo" /> 
+        <section id="view-section" class="main-container mx-auto text-center">
 
-</header>
+            <p class="mini-title mx-auto">View/Edit Competitors</p>
 
-<main class="main-container mx-auto text-center">
+            <div id="view-dynamic-comp-select"></div>
+            
+            <div id="view-dynamic-comp-info"></div>
 
-    <p class="item-title mx-auto">Competitor Number</p>
-    <input id="compNumber" type="text" />
+        </section>
 
-    <p class="item-title mx-auto">First Name</p>
-    <input id="firstName" type="text" />
+        <section id="add-section" class="main-container mx-auto text-center">
 
-    <p class="item-title mx-auto">Last Name</p>
-    <input id="lastName" type="text" />
+            <p class="mini-title mx-auto">Add Competitors</p>
 
-    <p class="item-title mx-auto">Organization Name</p>
-    <input id="orgName" type="text" />
+            <p class="item-title mx-auto">Select Competition Tier</p>
+            
+            <select id="tier-select">
+                {{#each arrays}}
+                    {{#each tiers}}
+                        {{> year/tier-block}}
+                    {{/each}}
+                {{/each}}
+            </select>
 
-    <p class="item-title mx-auto">Team Name</p>
-    <input id="teamName" type="text" />
+            <div id="add-dynamic-comp-info"></div>
 
-    <p class="item-title mx-auto">Competitor Type</p>
-    <select id="compType">
-        {{#each tiers}}
-            {{> year/year-tier-block}}
-        {{/each}}
-    </select>
+        </section>
 
-    <p class="item-title mx-auto">Competition Year</p>
-    <input id="compYear" type="text"  />
+    </main>
 
-</main>
+    {{> main/nav-menu-block}}
 
-<section class="main-container mx-auto text-center">
-
-    <div class="row mx-auto text-center">
-
-        <button class="nav-button mx-auto" id="compPrev"><</button>
-        <button class="nav-button mx-auto" id="compAdd">+</button>
-        <button class="nav-button mx-auto" id="compNext">></button>
-    
-    </div>
-
-</section>
-
-<section class="main-container mx-auto text-center">
-
-    <button class="button" id="compSaveButton">Save Changes</button>
-
-</section>
-
-<nav class="main-container mx-auto text-center">
-    
-    <button class="button" id="home">Home</button>
-    <button class="button" id="year">Year Setup</button>
-    <button class="button" id="comp">Competitor Entry</button>
-    <button class="button" id="score">Score Entry</button>
-    <button class="button" id="rep">Reports</button>
-    <button class="button" id="help">Instructions</button>
-
-</nav>
+</body>
