incorporated vector icons and other style updates

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,9 +2,17 @@
     <title>Annual Lineworkers Rodeo Scoring | {{title}}</title>
     {{> main/head-block}}
 </head>
-<body class="background">
+<body class="background mx-auto">
 
     {{> main/title-block}}
+
+    <main>
+
+      <section class="section-container mx-auto text-center">
+        <p class="mini-title mx-auto">Welcome!</p>
+        <p class="item-title mx-auto">Please use the navigation buttons below.</p>
+      </section>
+    </main>
 
     {{> main/nav-menu-block}}
 
