--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,7 @@
 .background {
   background-color: rgba(39, 89, 55, 45%);
   width: 375px;
-  padding: 10px;
+  padding: 20px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -13,7 +13,7 @@
   color: white;
   border: solid 1px #275937;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #275937;
+  box-shadow: 2px 2px 5px black;
   padding: 5px;
   text-align: center;
   font-size: 22px;
@@ -27,15 +27,15 @@
   background-color: rgba(39, 89, 55, 10%);
   border: solid 1px #275937;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #275937;
+  box-shadow: 2px 2px 5px black;
   margin: 10px 0 10px 0;
-  padding: 10px;
+  padding: 20px;
 }
 .result-container {
   background-color: lightgray;
   border: solid 1px #275937;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #275937;
+  box-shadow: 2px 2px 5px black;
   margin: 10px 0 10px 0;
   padding: 10px;
 }
@@ -45,7 +45,7 @@
   color: white;
   border: solid 1px #275937;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #275937;
+  box-shadow: 2px 2px 5px black;
   margin-bottom: 10px;
   padding: 5px;
   text-align: center;
@@ -57,7 +57,7 @@
   text-align: center;
 }
 .score-title {
-  width: 100px;
+  width: 75px;
 }
 /* buttons */
 .button {
@@ -65,17 +65,17 @@
   color: white;
   border: solid 1px #275937;
   border-radius: 40px;
-  box-shadow: 2px 2px 5px #275937;
-  margin-bottom: 10px;
+  box-shadow: 2px 2px 5px black;
+  margin: 10px;
   padding: 5px;
-  width: 333px;
+  width: 250px;
 }
 .square-button {
   background-color: #275937;
   color: white;
   border: solid 1px #275937;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #275937;
+  box-shadow: 2px 2px 5px black;
   margin-bottom: 10px;
   margin-left: 10px;
   padding: 5px;
@@ -101,12 +101,13 @@ input:focus,
 input:active {
   background-color: white;
   color: #275937;
-  border: solid 1px #275937;
+  /* border: solid 1px #275937; */
+  border: none;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #275937;
+  box-shadow: 2px 2px 5px black;
   margin-bottom: 10px;
   padding: 5px;
-  width: 333px;
+  width: 295px;
   outline: none;
 }
 select:enabled,
@@ -114,12 +115,13 @@ select:focus,
 select:active {
   background-color: white;
   color: #275937;
-  border: solid 1px #275937;
+  /* border: solid 1px #275937; */
+  border: none;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px #275937;
+  box-shadow: 2px 2px 5px black;
   margin-bottom: 10px;
   padding: 5px;
-  width: 333px;
+  width: 295px;
   text-align: center;
   outline: none;
 }
@@ -133,15 +135,16 @@ select:active {
 
 .warning {
   /* font-size: 22px; */
-  max-width: 90%;
+  max-width: 295px;
   width: 400px;
   text-align: center;
-  border: solid 5px red;
+  border: none;
   background-color: red;
   color: white;
   border-radius: 15px;
   box-shadow: 2px 2px 5px black;
   margin-top: 10px;
+  padding: 10px;
 }
 
 
@@ -150,16 +153,16 @@ select:active {
 
 /* width classes */
 .year-input {
-  width: 275px !important;
+  width: 235px !important;
   margin-right: 10px !important;
 }
 .view-input {
-  width: 220px !important;
+  width: 175px !important;
   margin-right: 10px !important;
 }
 .score-input {
   width: 83px !important;
-  text-align: center;
+  text-align: center !important;
 }
 /* prevents mouse clicks on child elements for vector icons */
 svg > * {
