--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,13 +6,7 @@
 
     {{> main/title-block}}
 
-    <main>
-
-      <section class="section-container mx-auto text-center">
-        <p class="mini-title mx-auto">Welcome!</p>
-        <p class="item-title mx-auto">Please use the navigation buttons below.</p>
-      </section>
-    </main>
+    <main></main>
 
     {{> main/nav-menu-block}}
 
