--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,7 +11,6 @@
 .title {
   background-color: #275937;
   color: white;
-  border: solid 1px #275937;
   border-radius: 10px;
   box-shadow: 2px 2px 5px black;
   padding: 5px;
@@ -73,7 +72,6 @@
 .square-button {
   background-color: #275937;
   color: white;
-  border: solid 1px #275937;
   border-radius: 10px;
   box-shadow: 2px 2px 5px black;
   margin-bottom: 10px;
@@ -83,9 +81,8 @@
   font-size: 22px;
 }
 .del-btn {
-  background-color: red;
+  background-color: rgb(192, 0, 0);
   color: white;
-  border: solid 1px red;
 }
 .button:hover,
 .button:focus,
@@ -101,7 +98,6 @@ input:focus,
 input:active {
   background-color: white;
   color: #275937;
-  /* border: solid 1px #275937; */
   border: none;
   border-radius: 10px;
   box-shadow: 2px 2px 5px black;
@@ -115,7 +111,6 @@ select:focus,
 select:active {
   background-color: white;
   color: #275937;
-  /* border: solid 1px #275937; */
   border: none;
   border-radius: 10px;
   box-shadow: 2px 2px 5px black;
@@ -125,32 +120,18 @@ select:active {
   text-align: center;
   outline: none;
 }
-
-
-
-
-
-
-
-
+/* warning element on view page */
 .warning {
-  /* font-size: 22px; */
-  max-width: 295px;
-  width: 400px;
-  text-align: center;
-  border: none;
-  background-color: red;
+  background-color: rgb(192, 0, 0);
   color: white;
+  border: none;
   border-radius: 15px;
   box-shadow: 2px 2px 5px black;
+  width: 295px;
+  text-align: center;
   margin-top: 10px;
   padding: 10px;
 }
-
-
-
-
-
 /* width classes */
 .year-input {
   width: 235px !important;
