--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -64,7 +64,7 @@
   color: white;
   border: none;
   border-radius: 40px;
-  box-shadow: 2px 2px 5px black;
+  box-shadow: 1px 1px 6px black;
   margin: 10px;
   padding: 5px;
   width: 250px;
@@ -74,7 +74,7 @@
   color: white;
   border: none;
   border-radius: 10px;
-  box-shadow: 2px 2px 5px black;
+  box-shadow: 1px 1px 6px black;
   margin-bottom: 10px;
   margin-left: 10px;
   padding: 5px;
@@ -85,14 +85,28 @@
   background-color: rgb(192, 0, 0);
   color: white;
 }
-.button:hover,
+.button:hover, .square-button:hover {
+  cursor: pointer;
+  outline: none;
+  box-shadow: 3px 3px 6px black;
+}
+.button:active, .square-button:active {
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 0 0 black;
+}
+.button:focus, .square-button:focus {
+  cursor: pointer;
+  outline: none;
+}
+/* .button:hover,
 .button:focus,
 .square-button:hover,
 .square-button:focus {
   outline: none;
   opacity: 0.7;
   cursor: pointer;
-}
+} */
 /* user input elements */
 input:enabled,
 input:focus,
