--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,33 +6,33 @@
 <body class="background mx-auto">
 
   {{> main/title-block}}
-
+    
   <main class="container mx-auto" style="background-color: #e6e6e6">
-    <div class="subtitle mx-auto">View / Edit</div>
+    <div class="subtitle mx-auto"><i class="fas fa-edit nav-icon-title"></i>View / Edit</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
       Add or Update Tiers, Events, Competition Years, and Organizations
     </p>
-    <div class="subtitle mx-auto">Year Setup</div>
+    <div class="subtitle mx-auto"><i class="fas fa-sliders-h nav-icon-title"></i>Year Setup</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
       Add Active Tiers and Events for a Competition Year
     </p>
-    <div class="subtitle mx-auto">Competitors</div>
+    <div class="subtitle mx-auto"><i class="fas fa-user-edit nav-icon-title"></i>Competitors</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
       Add or Update Competitor Information
     </p>
-    <div class="subtitle mx-auto">Scores</div>
+    <div class="subtitle mx-auto"><i class="fas fa-list-ol nav-icon-title"></i>Scores</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
       Input Event Scores for Competitors
     </p>
-    <div class="subtitle mx-auto">Reports</div>
+    <div class="subtitle mx-auto"><i class="fas fa-file-pdf nav-icon-title"></i>Reports</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
