--- a/views/partials/main/nav-menu-block.handlebars
+++ b/views/partials/main/nav-menu-block.handlebars
@@ -1,4 +1,4 @@
-<nav class="mx-auto text-center">
+{{!-- <nav class="mx-auto text-center">
   <div class="row text-center mx-auto">
     <button class="button green mx-auto" id="home">Home</button>
     <button class="button green mx-auto" id="view">View/Edit</button>
@@ -11,4 +11,16 @@
     <button class="button green mx-auto" id="score">Scores</button>
     <button class="button green mx-auto" id="reports">Reports</button>
   </div>
+</nav> --}}
+
+<nav class="mx-auto text-center" style="width: 90%;">
+  <div class="row text-center mx-auto">
+    <i id="home" class="fas fa-home nav-icon mx-auto"></i>
+    <i id="view" class="fas fa-edit nav-icon mx-auto"></i>
+    <i id="year" class="fas fa-sliders-h nav-icon mx-auto"></i>
+    <i id="comp" class="fas fa-user-edit nav-icon mx-auto"></i>
+    <i id="score" class="fas fa-list-ol nav-icon mx-auto"></i>
+    <i id="reports" class="fas fa-file-pdf nav-icon mx-auto"></i>
+  </div>
 </nav>
+  <hr class="line full mx-auto">
