--- a/views/partials/main/title-block.handlebars
+++ b/views/partials/main/title-block.handlebars
@@ -1,8 +1,10 @@
 <header class="text-center mx-auto">
     
+    {{> main/nav-menu-block}}
+
     <img class="logo row mx-auto" src="/assets/images/logo.png" alt="Santee Cooper logo" /> 
     
-    {{> main/nav-menu-block}}
+    {{!-- {{> main/nav-menu-block}} --}}
 
     <hr class="line full mx-auto">
 
