updated nav icons

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
     <p class="text mx-auto">
       Add or Update Tiers, Events, Competition Years, and Organizations
     </p>
-    <div class="subtitle mx-auto"><i class="fas fa-sliders-h nav-icon-title"></i>Year Setup</div>
+    <div class="subtitle mx-auto"><i class="far fa-calendar-alt nav-icon-title"></i>Year Setup</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
@@ -26,13 +26,13 @@
     <p class="text mx-auto">
       Add or Update Competitor Information
     </p>
-    <div class="subtitle mx-auto"><i class="fas fa-list-ol nav-icon-title"></i>Scores</div>
+    <div class="subtitle mx-auto"><i class="far fa-clock nav-icon-title"></i>Scores</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
       Input Event Scores for Competitors
     </p>
-    <div class="subtitle mx-auto"><i class="fas fa-file-pdf nav-icon-title"></i>Reports</div>
+    <div class="subtitle mx-auto"><i class="far fa-file-alt nav-icon-title"></i>Reports</div>
     <hr class="line large mx-auto">
     </hr>
     <p class="text mx-auto">
