--- a/views/partials/main/nav-menu-block.handlebars
+++ b/views/partials/main/nav-menu-block.handlebars
@@ -17,10 +17,11 @@
   <div class="row text-center mx-auto">
     <i id="home" class="fas fa-home nav-icon mx-auto"></i>
     <i id="view" class="fas fa-edit nav-icon mx-auto"></i>
-    <i id="year" class="fas fa-sliders-h nav-icon mx-auto"></i>
+    <i id="year" class="far fa-calendar-alt nav-icon mx-auto"></i>
     <i id="comp" class="fas fa-user-edit nav-icon mx-auto"></i>
-    <i id="score" class="fas fa-list-ol nav-icon mx-auto"></i>
-    <i id="reports" class="fas fa-file-pdf nav-icon mx-auto"></i>
+    <i id="score" class="far fa-clock nav-icon mx-auto"></i>
+    <i id="reports" class="far fa-file-alt nav-icon mx-auto"></i>
   </div>
 </nav>
+
   <hr class="line full mx-auto">
