--- a/views/competitors.handlebars
+++ b/views/competitors.handlebars
@@ -1,8 +1,6 @@
 <head>
     <title>Annual Lineworkers Rodeo Scoring | {{#each arrays}} {{title}} {{/each}}</title>
     {{> main/head-block}}
-    <!-- competitors page js script -->
-    <script type="text/javascript" src="/assets/js/comp.js"></script>
 </head>
 <body class="background mx-auto">
 
@@ -60,4 +58,7 @@
 
     </main>
 
+    {{> main/script-block}}
+    <!-- competitors page js script -->
+    <script type="text/javascript" src="/assets/js/comp.js"></script>
 </body>
