--- a/views/partials/main/nav-menu-block.handlebars
+++ b/views/partials/main/nav-menu-block.handlebars
@@ -15,12 +15,12 @@
 
 <nav class="mx-auto text-center" style="width: 90%;">
   <div class="row text-center mx-auto">
-    <i id="home" class="fas fa-home nav-icon mx-auto"></i>
-    <i id="view" class="fas fa-edit nav-icon mx-auto"></i>
-    <i id="year" class="far fa-calendar-alt nav-icon mx-auto"></i>
-    <i id="comp" class="fas fa-user-edit nav-icon mx-auto"></i>
-    <i id="score" class="far fa-clock nav-icon mx-auto"></i>
-    <i id="reports" class="far fa-file-alt nav-icon mx-auto"></i>
+    {{> icons/home-icon-block}}
+    {{> icons/view-icon-block}}
+    {{> icons/year-icon-block}}
+    {{> icons/comp-icon-block}}
+    {{> icons/score-icon-block}}
+    {{> icons/reports-icon-block}}
   </div>
 </nav>
 
