--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -45,7 +45,9 @@
             <div id="add-container"></div>
 
         </section>
-        
+
     </main>
+
+    {{> main/script-block}}
 
 </body>
