--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -96,11 +96,13 @@
   border-radius: 5px;
   box-shadow: 1px 1px 3px black;
   margin: 0 0 5px 5px;
-  padding: 10px;
+  padding: 0;
   font-size: 1.4em;
   height: 1.85em;
   width: 1.85em;
-  text-align: center;
+  display: grid;
+  align-content: center;
+  justify-content: center;
 }
 .button:hover, .square-button:hover {
   cursor: pointer;
@@ -186,7 +188,7 @@ select:active {
   width: 90%;
 }
 /* prevents mouse clicks on child elements for vector icons */
-svg > *, i > * {
+svg > *, .square-button > * {
   pointer-events: none;
 }
 /* prevents default link styling */
