refactored to remove jQuery and fontawesome from year page

--- a/views/year.handlebars
+++ b/views/year.handlebars
@@ -1,8 +1,6 @@
 <head>
   <title>Annual Lineworkers Rodeo Scoring | {{#each arrays}} {{title}} {{/each}}</title>
   {{> main/head-block}}
-  <!-- view page js script -->
-  <script type="text/javascript" src="/assets/js/year.js"></script>
 </head>
 
 <body class="background mx-auto">
@@ -43,7 +41,11 @@
             {{/each}}
           {{/each}}
         </select>
-        <i class="fas fa-plus square-button blue mx-auto" id="year-add-tier-button"></i>
+        <div id="year-add-tier-button" class="square-button blue mx-auto">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+            </svg>
+        </div>
       </div>
 
     </section>
@@ -51,5 +53,8 @@
   </main>
 
   {{> main/script-block}}
+
+  <!-- view page js script -->
+  <script type="text/javascript" src="/assets/js/year.js"></script>
 
 </body>
